# NativeScript

./: .ackrc  .classpath  .ctags_exclude  .editorconfig  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .npsrc  .prettierignore  .prettierrc.json  .project  .travis.yml  .yarnrc.yml  AUTHORS  AndroidManifest.xml  BCL.csproj  BCL.sln  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CodingConvention.md  CreateNewModule.md  CrossPlatformModules.csproj  CrossPlatformModules.csproj.bak  CrossPlatformModules.sln  DebugV8Heap.md  DevelopmentWorkflow.md  Gruntfile.js  HandlingErrors.md  LICENSE  LICENSE.md  LICENSE.proui  MAINTAINERS.md  Makefile  Modules30Changes.md  NativeScript.code-workspace  POM.xml  PULL_REQUEST_TESTS.md  (+76 more)
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_template.md  pull_request_template.md
.husky/: pre-commit
Application/: application.android.ts  application.d.ts  application.ios.ts  application_common.ts  index.ts
Camera/: camera.android.ts  camera.d.ts  camera.ios.ts  index.ts
Console/: console.android.ts  console.d.ts  console.ios.ts  console.ts  console_common.ts  console_helper.android.ts  console_helper.d.ts  console_helper.ios.ts  index.ts
Database/: Readme.md  database.android.ts  database.d.ts  database.ios.ts  database_query_result.ts
Deploy/: Readme.md
FileSystem/: file_system.d.ts  (+5 more)
crates/libs/nativescript-core/: Cargo.toml  cbindgen.toml
crates/libs/nativescript-core/src/: buffers.rs  ccow.rs  lib.rs  text_decoder.rs  text_encoder.rs  url.rs
(+6682 files in other folders)
